--- a/mufid.html
+++ b/mufid.html
@@ -28,28 +28,28 @@
           <div class="card mb-3">
             <div class="card-header">
               <i class="fas fa-table"></i>
-              Data Table Example</div>
+              Data Santri PerKelas</div>
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
-                      <th>Name</th>
-                      <th>Position</th>
-                      <th>Office</th>
-                      <th>Age</th>
-                      <th>Start date</th>
-                      <th>Salary</th>
+                      <th>Nama</th>
+                      <th>Alamat</th>
+                      <th>Himpunan</th>
+                      <th>Kamar</th>
+                      <th>Mustahiq/th>
+                      <th>Kelas</th>
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
-                      <th>Name</th>
-                      <th>Position</th>
-                      <th>Office</th>
-                      <th>Age</th>
-                      <th>Start date</th>
-                      <th>Salary</th>
+                      <th>Nama</th>
+                      <th>Alamat</th>
+                      <th>Himpunan</th>
+                      <th>Kamar</th>
+                      <th>Mustahiq/th>
+                      <th>Kelas</th>
                     </tr>
                   </tfoot>
                   <tbody>
