--- a/mufid.html
+++ b/mufid.html
@@ -38,7 +38,7 @@
                       <th>Alamat</th>
                       <th>Himpunan</th>
                       <th>Kamar</th>
-                      <th>Mustahiq/th>
+                      <th>Mustahiq</th>
                       <th>Kelas</th>
                     </tr>
                   </thead>
@@ -48,7 +48,7 @@
                       <th>Alamat</th>
                       <th>Himpunan</th>
                       <th>Kamar</th>
-                      <th>Mustahiq/th>
+                      <th>Mustahiq</th>
                       <th>Kelas</th>
                     </tr>
                   </tfoot>
