--- a/mufid.html
+++ b/mufid.html
@@ -36,8 +36,8 @@
                     <tr>
                       <th>Nama</th>
                       <th>Alamat</th>
-                      <th>Himpunan</th>
-                      <th>Kamar</th>
+                      <th>Tempat Lahir</th>
+                      <th>Tanggal Lahir</th>
                       <th>Mustahiq</th>
                       <th>Kelas</th>
                     </tr>
@@ -46,8 +46,8 @@
                     <tr>
                       <th>Nama</th>
                       <th>Alamat</th>
-                      <th>Himpunan</th>
-                      <th>Kamar</th>
+                      <th>Tempat Lahir</th>
+                      <th>Tanggal Lahir</th>
                       <th>Mustahiq</th>
                       <th>Kelas</th>
                     </tr>
