--- a/Loginannawawi.html
+++ b/Loginannawawi.html
@@ -52,8 +52,8 @@
             <a class="btn btn-primary btn-block" href="mufid.html">Login</a>
           </form>
           <div class="text-center">
-            <a class="d-block small mt-3" href="register.html">Register an Account</a>
-            <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+            <a class="d-block small mt-3" href="https://www.annawawiberjan.or.id/">Kembali ke An-Nawawi Berjan</a>
+            <a class="d-block small" href="https://raw.githack.com/MufidulChikam/mufidulchikam.github.io/master/Loginannawawi.html">atau diam aja ditempat gak papa</a>
           </div>
         </div>
       </div>
