--- a/mufid.html
+++ b/mufid.html
@@ -9105,7 +9105,7 @@
                 </table>
               </div>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <div class="card-footer small text-muted">Sanatud Dirosah 1439-1440 H./ 2018-2019 M.</div>
           </div>
 
         </div>
