--- a/mufid.html
+++ b/mufid.html
@@ -7414,7 +7414,7 @@
 								<td>III MDW B</td>
 							</tr>
 							<tr>
-								<td>Ahmad Alfin Sajidin</td>
+								<td><a href="https://drive.google.com/open?id=1fpTR4k5gbv4zo3c1yz6zakCwJ_kMJkRk" target="_blank">Ahmad Alfin Sajidin</a></td>
 								<td>Sembung Kulon, Kagungan, Kepil, Wonosobo</td>
 								<td>Wonosobo</td>
 								<td>26 August 1998</td>
